# ppt-rl-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PROGRESS.md  README.md  TASK.md  __init__.py  agent_action_tools.py  client.py  inference.py  inference_debug.py  models.py  openenv.yaml  pptx_functions.py  pyproject.toml  validate-submission.sh
docs/: TASK.md  TASK_REWARD.md
ppt_agent/: __init__.py  agent_action_tools.py  agent_action_tools_inside.py  client.py  client_inside.py  inference.py  inference_debug.py  inference_inside.py
ppt_agent/server/: app.py  data.json  data.py  ppt_agent_environment.py  pptx_functions.py  pptx_render_service.py  pptx_tools.py  presentbench_metrics.py  presentbench_scoring.py  presentbench_spec_builder.py  reward_kernel.py  reward_metrics.py  reward_models.py  reward_prompts.py  slidesgenbench_prompts.py  slidesgenbench_quantitative_judge.py  slidesgenbench_quizbank_service.py  slidesgenbench_rendered_aesthetics.py  slidesgenbench_scoring.py  slidesgenbench_spec_builder.py  slidesgenbench_text_layout.py  task_registry.py
ppt_agent/server/tools/: pptx_tools.py
server/: Dockerfile  __init__.py  app.py  data.json  debug_logging.py  grader.py  llm_client.py  ppt_agent_environment.py  task_registry.py
server/tools/: __init__.py  pptx_tools.py
server/utils/: __init__.py  pptx_extraction.py  pptx_functions.py  reward_inspection.py  reward_kernel.py  reward_metrics.py  reward_models.py  reward_prompts.py  reward_quizbank_service.py
src/: main.py
src/tools/: pptx_tools.py
src/utils/: pptx_functions.py
tests/: client_test.py  test_client_metadata_roundtrip.py  test_inference_tool_calling.py  test_ppt_agent_environment.py  test_task_registry.py
tests/reward/: quizbank_test_utils.py  test_intermediate_slide_aesthetics.py  test_quantitative_judge.py  test_quizbank_generation.py  test_quizbank_resilience.py  test_rendered_aesthetics.py  test_reward_kernel.py  test_slide_staleness_penalty.py  test_slidesgenbench_text_layout.py  test_text_similarity.py  test_visual_sparsity_penalty.py
tests/scripts/: generate_sample_presentations.py
tests/tools/: test_pptx_tool_wrappers.py  test_pptx_tools.py
(+23 files in other folders)
