# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt_agent"
version = "0.1.0"
description = "Ppt Agent environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.1",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.3.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m ppt_agent.server.app
server = "ppt_agent.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "ppt_agent",
    "ppt_agent.server",
    "ppt_agent.server.tools",
    "ppt_agent.server.utils",
    "ppt_agent.server.utils.rendering",
    "ppt_agent.server.utils.presentbench",
    "ppt_agent.server.utils.slidesgenbench",
]

[tool.setuptools.package-dir]
"ppt_agent" = "."
"ppt_agent.server" = "server"
"ppt_agent.server.tools" = "server/tools"
"ppt_agent.server.utils" = "server/utils"
"ppt_agent.server.utils.rendering" = "server/utils/rendering"
"ppt_agent.server.utils.presentbench" = "server/utils/presentbench"
"ppt_agent.server.utils.slidesgenbench" = "server/utils/slidesgenbench"

[tool.setuptools.package-data]
"ppt_agent.server" = ["data.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
